Realy fix link truncating

--- a/apps/frontend/src/components/form-renderer/form-renderer.css
+++ b/apps/frontend/src/components/form-renderer/form-renderer.css
@@ -340,7 +340,7 @@
   .formio-component-url {
     /* Reset table styling so it doesn't resize beyond container */
     table,
-    thead,
+    tbody,
     tr,
     td {
       @apply block;
